%%{init: {'theme':'base', 'themeVariables': {'fontFamily':'Segoe UI, Noto Sans KR, sans-serif','primaryColor':'#EAF4FF','primaryTextColor':'#0F172A','primaryBorderColor':'#3B82F6','lineColor':'#64748B'}}}%%
classDiagram
    class Session {
        +Initialize(id, socket)
        +SetOnRecv(callback)
        +ProcessRawRecv(data, size)
        +Send(data, size) SendResult
        +Close()
        +WaitForPendingTasks()
        +Reset()
        +OnConnected()
        +OnDisconnected()
        +PostRecv() bool
        -mRecvAccumBuffer vector~char~
        -mSendQueue queue
        -mState atomic~SessionState~
    }

    class SessionPool {
        +Initialize(capacity) bool
        +Acquire() SessionRef
        +Shutdown()
        +ResolveIOType(ov, outType) bool
        +Capacity() size_t
        +ActiveCount() size_t
        -mSlots unique_ptr~PoolSlot[]~
        -mFreeList vector~size_t~
        -mIOContextMap unordered_map
        -ReleaseInternal(slotIdx)
    }

    class SessionManager {
        +Instance() SessionManager&
        +CreateSession(socket) SessionRef
        +RemoveSession(id)
        +GetSession(id) SessionRef
        +SetSessionConfigurator(callback)
        +CloseAllSessions()
        +GetSessionCount() size_t
        -mSessions unordered_map
        -mSessionConfigurator function
    }

    class TestServer {
        +OnClientConnectionEstablished()
        +OnClientConnectionClosed()
        -SetSessionConfigurator 등록
    }

    SessionPool "1" --> "*" Session : 슬롯 보유 (고정 주소)
    SessionManager --> SessionPool : Acquire()
    SessionManager --> Session : Initialize + Configure
    TestServer ..> SessionManager : SetSessionConfigurator
    TestServer ..> Session : SetOnRecv 콜백 주입
